--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
 <!-- HTML Meta Tags -->
-  <title>ETC Grants DAO</title>
+  <title>POW Summmit 2023</title>
   <meta name="description" content="">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://etcgrants.org/">
+  <meta property="og:url" content="https://powsummit.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="ETC Grants DAO">
-  <meta property="og:description" content="We provide funding for promising projects that will invigorate the Ethereum Classic ecosystem.">
+  <meta property="og:title" content="POW Summit 2023">
+  <meta property="og:description" content="Bringing together the major POW chains.">
   <meta property="og:image" content="/ETCGrants-Twittercard.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="etcgrants.org">
-  <meta property="twitter:url" content="https://etcgrants.org/">
-  <meta name="twitter:title" content="ETC Grants DAO">
-  <meta name="twitter:description" content="We provide funding for promising projects that will invigorate the Ethereum Classic ecosystem.">
+  <meta property="twitter:domain" content="powsummit.com">
+  <meta property="twitter:url" content="https://powsummit.com/">
+  <meta name="twitter:title" content="POW Summit 2023">
+  <meta name="twitter:description" content="Bringing together the major POW chains.">
   <meta name="twitter:image" content="/ETCGrants-Twittercard.jpg">
 
 
@@ -37,7 +37,7 @@
 
 <meta name="google-site-verification" content="l0bc2ESX0rxf5L4vxms1wZp-uydwpwDM3S4RcyIa8xg" />
 
-    <meta name="keywords" content="Ethereum Classic, ETC Grants DAO, ETC Grants" />
+    <meta name="keywords" content="POW, POW Summit, Proof of Work, Blockchain, Cryptocurrency, Conference" />
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -63,7 +63,7 @@
   <body class="bg-background">
     <noscript>
       <strong
-        >We're sorry but ETC Grants DAO website doesn't work properly without
+        >We're sorry but the POW Summit website doesn't work properly without
         JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
