Added images, logo, twittercard and some text updates

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="POW Summit 2023">
   <meta property="og:description" content="Bringing together the major POW chains.">
-  <meta property="og:image" content="/ETCGrants-Twittercard.jpg">
+  <meta property="og:image" content="/POWSummit-Twittercard.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -22,7 +22,7 @@
   <meta property="twitter:url" content="https://powsummit.com/">
   <meta name="twitter:title" content="POW Summit 2023">
   <meta name="twitter:description" content="Bringing together the major POW chains.">
-  <meta name="twitter:image" content="/ETCGrants-Twittercard.jpg">
+  <meta name="twitter:image" content="/POWSummit-Twittercard.jpg">
 
 
 <!-- Google tag (gtag.js) -->
@@ -38,7 +38,7 @@
 <meta name="google-site-verification" content="l0bc2ESX0rxf5L4vxms1wZp-uydwpwDM3S4RcyIa8xg" />
 
     <meta name="keywords" content="POW, POW Summit, Proof of Work, Blockchain, Cryptocurrency, Conference" />
-    <link rel="icon" type="image/x-icon" href="favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="pickaxe.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
